--- a/work_blog/static/blog.css
+++ b/work_blog/static/blog.css
@@ -58,7 +58,7 @@ div.blog-content{
     margin-bottom: 2em;
     margin-top: 2em;
 }
-div.blog-content>p>img {
+div.blog-content p img {
     display: block !important;
     max-width: 100% !important;
     height: auto !important;
