--- a/work_blog/templates/base.html
+++ b/work_blog/templates/base.html
@@ -170,7 +170,7 @@
     <footer class="fixed-bottom">
         <div class="container-fluid">
             <span>
-                Welcome to visit my personal blog © 
+                Welcome to visit my personal blog. Copyright ©
                 <a href="{% url 'home' %}">非马梦衢</a>
                 个人开发,仅供交流
                 <img src="{% static 'icp.png' %}" alt="icp" width="18" height="20">
