--- a/work_blog/templates/home.html
+++ b/work_blog/templates/home.html
@@ -36,7 +36,7 @@
                         <ul class="list">
                             {% for blog_type in blog_types %}
                                 <li class="panel-detail">
-                                    <a href="{% url 'blog:blogs_type' blog_type.id %}">
+                                    <a href="{% url 'blog:blogs_type' blog_type.id %}" title="{{ blog_type.type_name }}">
                                         {{ blog_type.type_name }}
                                         <span style="float: right;">({{ blog_type.blog_set.count }}篇)</span>
                                     </a>
@@ -74,7 +74,10 @@
                         </div>
                         <div role="tabpanel" class="tab-pane" id="profile">
                             
-                            <p>博主正在努力丰富中，敬请关注。。。</p>
+                            <p>
+                                本站是基于python3+django2.1+bootstrap3开发;
+                                其它内容博主正在努力丰富中，敬请关注^_^
+                            </p>
                             
                         </div>
                         <div role="tabpanel" class="tab-pane" id="messages">
@@ -103,7 +106,9 @@
                             {% for new_blog in new_blogs %}
                                 <li>
                                     <a href="{% url 'blog:blog_detail' new_blog.id %}"
-                                       target="_blank">{{ new_blog.title|truncatechars:26 }}</a>
+                                       target="_blank" title="{{ new_blog.title }}">
+                                        {{ new_blog.title|truncatechars:26 }}
+                                    </a>
                                     <span>({{ new_blog.get_blog_readnum }})</span>
                                 </li>
                             {% empty %}
@@ -123,7 +128,9 @@
                             {% for blog, blog_readnum in blog_dict.items %}
                                 <li>
                                     <a href="{% url 'blog:blog_detail' blog.id %}"
-                                       target="_blank">{{ blog.title|truncatechars:26 }}</a>
+                                       target="_blank" title="{{ blog.title }}">
+                                        {{ blog.title|truncatechars:26 }}
+                                    </a>
                                     <span>({{ blog_readnum }})</span>
                                 </li>
                             {% empty %}
@@ -143,7 +150,9 @@
                             {% for hot_data in today_HotData %}
                                 <li>
                                     <a href="{% url 'blog:blog_detail' hot_data.object_id %}"
-                                       target="_blank">{{ hot_data.content_object.title|truncatechars:26 }}</a>
+                                       target="_blank" title="{{ hot_data.content_object.title }}">
+                                        {{ hot_data.content_object.title|truncatechars:26 }}
+                                    </a>
                                     <span>({{ hot_data.read_num }})</span>
                                 </li>
                             {% empty %}
@@ -160,7 +169,9 @@
                             {% for hot_data in yesterday_HotData %}
                                 <li>
                                     <a href="{% url 'blog:blog_detail' hot_data.object_id %}"
-                                       target="_blank">{{ hot_data.content_object.title|truncatechars:26 }}</a>
+                                       target="_blank" title="{{ hot_data.content_object.title }}">
+                                        {{ hot_data.content_object.title|truncatechars:26 }}
+                                    </a>
                                     <span>({{ hot_data.read_num }})</span>
                                 </li>
                             {% empty %}
@@ -175,8 +186,11 @@
                         <h4 class="home-block-title">7天阅读热榜</h4>
                         <ul class="list">
                             {% for hot_blog in seven_day_HotBlog %}
-                                <li><a href="{% url 'blog:blog_detail' hot_blog.id %}"
-                                       target="_blank">{{ hot_blog.title|truncatechars:25 }}</a>
+                                <li>
+                                    <a href="{% url 'blog:blog_detail' hot_blog.id %}"
+                                       target="_blank" title="{{ hot_blog.title }}">
+                                        {{ hot_blog.title|truncatechars:25 }}
+                                    </a>
                                     <span>({{ hot_blog.read_num_sum }})</span>
                                 </li>
                             {% empty %}
